# ast-variants

./: .gitignore  CMakeLists.txt  build.py  variants.sln
include/: ast.h  lambda.h
include/ustd/: iterators.h  meta.h  type_traits.h  utility.h  variant.h
source/: ast.cpp  lambda.cpp  main.cpp
source/ustd/: utility.cpp
variants/: Ast.cpp  Ast.h  Main.cpp  Type_traits.h  Variant_helpers.h  variants.vcxproj  variants.vcxproj.filters
